--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "dompurify": "^1.0.11",
+    "marked": "^0.7.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-fcctest": "^1.3.5",
     "react-scripts": "3.1.1",
     "reactstrap": "^8.0.1"
   },
