Broke out into separate Header, EditorPane, and PreviewPane components. Added gh-pages

--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "markdown-previewer",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://tmonks.github.io/markdown-previewer",
   "dependencies": {
     "bootstrap": "^4.3.1",
     "dompurify": "^1.0.11",
+    "gh-pages": "^2.1.1",
     "marked": "^0.7.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
@@ -16,7 +18,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+	"predeploy": "npm run build",
+	"deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
